--- a/src/styles/errors.module.scss
+++ b/src/styles/errors.module.scss
@@ -17,8 +17,11 @@
     box-shadow: inset 0 -8px rgb(0 0 0 / 20%), 0 0 4px rgb(0 0 0 / 15%);
     color: var(--accent-color);
 
-    @media (max-width: 600px) {
+    @media (max-width: 1000px) {
         padding: 15px;
+        transform: scale(0.95);
+        background: unset;
+        box-shadow: unset;
     }
 }
 
