--- a/src/styles/all.module.scss
+++ b/src/styles/all.module.scss
@@ -283,8 +283,69 @@ a {
 }
 
 .inputContainer {
-    border: 2px solid rgba(0, 0, 0, 0.17);
+    align-items: center;
+    border: 2px solid var(--background-color);
     border-radius: 6px;
-    width: 90%;
-    height: 45;
+    display: flex;
+    flex-direction: row;
+    height: 45px;
+    margin: auto auto 15px;
+    max-width: 330px;
+    width: 80%;
+
+    &:focus-within {
+        border-color: var(--secondary-color);
+
+        &>i {
+            opacity: 1;
+        }
+    }
+
+    &>i {
+        align-items: center;
+        color: var(--accent-color);
+        display: flex;
+        font-size: 25px;
+        height: 45px;
+        justify-content: center;
+        min-width: 22px;
+        padding-left: 10px;
+        -webkit-user-select: none;
+        user-select: none;
+        width: 22px;
+        opacity: 0.5;
+    }
+
+    &>input {
+        align-items: center;
+        border: none;
+        background-color: var(--primary-color);
+        color: var(--accent-color);
+        display: flex;
+        flex-direction: row;
+        font-family: Nunito, sans-serif;
+        font-size: 17px;
+        height: 35px;
+        margin: 5px 2px 5px 11px;
+        max-width: 260px;
+        outline: none;
+        text-align: left;
+        width: calc(100% - 35px);
+
+        &:-moz-placeholder,
+        &:-ms-input-placeholder,
+        &::-moz-placeholder,
+        &::-webkit-input-placeholder {
+            color: var(--accent-color);
+            opacity: .25;
+        }
+
+        &:focus,
+        &:focus:-moz-placeholder,
+        &:focus:-ms-input-placeholder,
+        &:focus::-moz-placeholder,
+        &:focus::-webkit-input-placeholder {
+            color: var(--accent-color);
+        }
+    }
 }
