--- a/src/styles/all.module.scss
+++ b/src/styles/all.module.scss
@@ -271,6 +271,35 @@ a {
     color: var(--accent-color);
 }
 
+.errorContainer {
+    align-items: center;
+    border: 2px solid #ce1313;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: row;
+    margin: auto auto 20px;
+    max-width: 330px;
+    width: 80%;
+
+    &>i {
+        color: #ce1313;
+        height: 18px;
+        margin-left: 13px;
+        margin-right: 13px;
+        min-width: 20px;
+        -webkit-user-select: none;
+        user-select: none;
+        width: 20px;
+    }
+
+    &>div {
+        color: var(--accent-color);
+        font-size: 16px;
+        margin: 5px 5px 5px;
+        text-align: left;
+    }
+}
+
 .pageHeader {
     font-size: 44px;
     font-weight: 700;
@@ -327,10 +356,9 @@ a {
         font-size: 17px;
         height: 35px;
         margin: 5px 2px 5px 11px;
-        max-width: 260px;
         outline: none;
         text-align: left;
-        width: calc(100% - 35px);
+        width: 83.5%;
 
         &:-moz-placeholder,
         &:-ms-input-placeholder,
