--- a/src/styles/modal.module.scss
+++ b/src/styles/modal.module.scss
@@ -37,13 +37,13 @@
     }
 }
 
-.modalContent {
+.content {
     display: flex;
     width: 100%;
     height: 100%;
-    animation: modalContent linear .3s forwards;
+    animation: content linear .3s forwards;
 
-    @keyframes modalContent {
+    @keyframes content {
         0% {
             transform: scale(.5);
             opacity: 0;
@@ -64,9 +64,9 @@
     }
 
     &[data-closing="true"] {
-        animation: modalContentClose linear .3s forwards;
+        animation: contentClose linear .3s forwards;
 
-        @keyframes modalContentClose {
+        @keyframes contentClose {
             0% {
                 transform: scale(1);
                 opacity: 1;
@@ -88,7 +88,7 @@
     }
 }
 
-.modalContainer {
+.container {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -104,12 +104,12 @@
     box-shadow: inset 0 -7px rgba(0, 0, 0, .2), 0 0 4px rgba(0, 0, 0, .15);
 
     @media only screen and (max-width: 600px) {
-        min-width: 300px;
+        min-width: 350px;
         width: unset;
     }
 }
 
-.modalHeader {
+.header {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -120,7 +120,7 @@
     font-weight: 700;
 }
 
-.modalDivider {
+.divider {
     width: 100%;
     height: 5px;
     background-color: var(--accent-color);
@@ -128,7 +128,7 @@
     margin-bottom: 10px;
 }
 
-.modalBody {
+.text {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -138,7 +138,7 @@
     line-height: 1.4;
 }
 
-.modalButtons {
+.buttons {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -147,4 +147,12 @@
     font-size: 20px;
     line-height: 1.4;
     gap: 10px;
+
+    &[data-loading="true"] {
+        padding: 15px 20px 40px;
+    }
+}
+
+.loader {
+    transform: unset !important;
 }
