more of the market and switched to fetch, importing pages instead of a barrell file
Co-authored-by: ItzOrphx <ItzOrphx@users.noreply.github.com>
Co-authored-by: alicialol <notalicialol@users.noreply.github.com>

--- a/src/styles/all.module.scss
+++ b/src/styles/all.module.scss
@@ -301,8 +301,8 @@ a {
 }
 
 .pageHeader {
+    font-family: "Titan One", sans-serif;
     font-size: 44px;
-    font-weight: 700;
     color: var(--accent-color);
     margin: 15px 5% 10px;
 }
