--- a/src/styles/leaderboard.module.scss
+++ b/src/styles/leaderboard.module.scss
@@ -362,6 +362,10 @@
         &:hover {
             transform: scale(.99);
         }
+
+        &:active {
+            transform: scale(.97);
+        }
     }
 }
 
