--- a/src/styles/blooks.module.scss
+++ b/src/styles/blooks.module.scss
@@ -9,6 +9,14 @@
     padding: 10px 10px 19px;
     box-shadow: inset 0 -9px rgba(0, 0, 0, .2), 0 5px rgba(0, 0, 0, .25);
     box-sizing: border-box;
+
+    @media only screen and (max-width: 685px) {
+        top: unset;
+        bottom: 15px;
+        height: calc(45% - 30px);
+        width: 95%;
+        z-index: 5
+    }
 }
 
 .blooksHolder {
@@ -105,21 +113,20 @@
         align-items: center;
         bottom: 2px;
         left: -2px;
-   }
+    }
 
-   &:hover {
+    &:hover {
         transform: scale(0.95);
-   }
+    }
 
-   &:active {
+    &:active {
         transform: scale(0.9);
-   }
+    }
 
     &>img {
-        width: 100%;
-        height: 100%;
-        -o-object-fit: contain;
+        width: 55px;
         object-fit: contain;
+        -o-object-fit: contain;
 
         &[data-locked="true"] {
             filter: brightness(0);
@@ -142,6 +149,16 @@
     align-items: center;
     justify-content: center;
     border-radius: 10px;
+
+    @media only screen and (max-width: 1000px) {
+        width: 300px;
+    }
+
+    @media only screen and (max-width: 685px) {
+        right: calc(50% - 150px);
+        top: 4%;
+        transform: scale(0.75);
+    }
 }
 
 .rightBlookBackground {
@@ -159,16 +176,30 @@
     color: var(--accent-color);
     text-align: center;
 
+    @media only screen and (max-width: 1000px) {
+        top: 5px;
+        left: 2.5%;
+        width: 95%
+    }
+
     .rightBlookName {
         text-shadow: 0 3px 3px rgba(0, 0, 0, .2);
         width: 100%;
         height: 50px;
         text-align: center;
+
+        @media only screen and (max-width: 1000px) {
+            height: 30px;
+        }
     }
 
     .rightBlookRarity {
         font-size: 30px;
         -webkit-text-stroke: #000000 1px;
+
+        @media only screen and (max-width: 1000px) {
+            font-size: 20px;
+        }
     }
 }
 
@@ -178,6 +209,12 @@
     bottom: 85px;
     left: 105px;
     width: 190px;
+
+    @media only screen and (max-width: 1000px) {
+        bottom: 64px;
+        left: 78.5px;
+        width: 143px;
+    }
 
     &>img {
         width: 100%;
@@ -197,6 +234,11 @@
     text-align: center;
     font-size: 30px;
     text-shadow: 0 0 4px rgba(0, 0, 0, .4);
+
+    @media only screen and (max-width: 1000px) {
+        bottom: 15px;
+        font-size: 20px
+    }
 }
 
 .rightShadow {
@@ -210,10 +252,73 @@
     border-bottom-right-radius: 10px;
 }
 
+.rightButtonContainer {
+    position: absolute;
+    top: calc(50% + 220px);
+    right: 2.5%;
+    width: 400px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+
+    @media only screen and (max-width: 1000px) {
+        top: calc(50% + 180px);
+        width: 300px
+    }
+
+    @media only screen and (max-width: 685px) {
+        top: calc(18.5% + 180px);
+        right: 5%;
+        width: 90%
+    }
+}
+
+.rightButton {
+    width: 180px;
+    margin: 10px;
+
+    @media only screen and (max-width: 1000px) {
+        width: 140px;
+    }
+
+    .rightButtonInside {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        height: 40px;
+        color: var(--accent-color);
+        text-shadow: 1px 2px rgba(0, 0, 0, .2);
+        font-family: "Titan One", sans-serif;
+        font-size: 28px;
+        font-weight: 400 !important;
+
+        @media only screen and (max-width: 1000px) {
+            height: 30px;
+            font-size: 22px;
+        }
+
+        &>img {
+            width: 28px;
+            height: 28px;
+            margin-right: 7px;
+            margin-top: 3px;
+
+            @media only screen and (max-width: 1000px) {
+                width: 22px;
+                height: 22px;
+                margin-top: 3px;
+            }
+        }
+    }
+}
+
 .rightNoBlooksOwned {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 20px;
 }
