--- a/src/styles/blooks.module.scss
+++ b/src/styles/blooks.module.scss
@@ -135,6 +135,14 @@
 
     &[data-locked="true"] {
         cursor: unset;
+
+        &:hover {
+            transform: scale(1);
+        }
+
+        &:active {
+            transform: scale(1);
+        }
     }
 }
 
@@ -229,7 +237,7 @@
     bottom: 15px;
     left: 5%;
     width: 90%;
-    font-family: Titan One, sans-serif;
+    font-family: "Titan One", sans-serif;
     color: var(--accent-color);
     text-align: center;
     font-size: 30px;
@@ -268,7 +276,7 @@
     }
 
     @media only screen and (max-width: 685px) {
-        top: calc(18.5% + 180px);
+        top: calc(18% + 180px);
         right: 5%;
         width: 90%
     }
@@ -322,3 +330,5 @@
     align-items: center;
     font-size: 20px;
 }
+
+
