--- a/src/styles/buttons.module.scss
+++ b/src/styles/buttons.module.scss
@@ -2,6 +2,7 @@
     position: relative;
     cursor: pointer;
     outline: none;
+    min-width: 100px;
     width: fit-content;
     -webkit-user-select: none;
     -moz-user-select: none;
