--- a/src/styles/modal.module.scss
+++ b/src/styles/modal.module.scss
@@ -135,7 +135,7 @@
 
 .text {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     padding: 0 20px 15px;
