--- a/src/styles/sidebar.module.scss
+++ b/src/styles/sidebar.module.scss
@@ -211,3 +211,25 @@
     outline: none;
     cursor: pointer;
 }
+
+.notificationIndicator {
+    position: absolute;
+    right: 7px;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    background-color: #ff4e4e;
+    box-shadow: 0 0 5px rgba(0, 0, 0, .5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--accent-color);
+    font-family: "Titan One", sans-serif;
+    box-shadow: inset 0 -2.5px rgba(0, 0, 0, .2);
+    -webkit-text-stroke: 1.25px #000000;
+    font-size: 20px;
+
+    &>div {
+        margin-bottom: 4px;
+    }
+}
