a LOT of chat and also now going to start working on dms and rate limits and permissions

--- a/src/styles/all.module.scss
+++ b/src/styles/all.module.scss
@@ -18,6 +18,14 @@
     &::-webkit-scrollbar-thumb {
         background: var(--secondary-color);
     }
+
+    &[data-slate-editor="true"] {
+        overflow-wrap: unset !important;
+    }
+
+    &[contenteditable="true"] {
+        overflow-wrap: break-word !important;
+    }
 }
 
 :root {
