--- a/src/styles/chat.module.scss
+++ b/src/styles/chat.module.scss
@@ -24,7 +24,7 @@
     display: flex;
     list-style: none;
     padding-inline: 10px 65px;
-    margin-block: 2.5px;
+    line-height: 30px;
 
     &:hover {
         background-color: rgb(0 0 0 / 15%);
@@ -60,6 +60,12 @@
     position: relative;
     display: flex;
     justify-content: flex-end;
+    cursor: pointer;
+    transition: .2s;
+
+    &:hover {
+        transform: scale(0.9);
+    }
 }
 
 .usernameContainer {
@@ -107,6 +113,7 @@
 .messageContent {
     color: var(--accent-color);
     word-wrap: anywhere;
+    white-space: pre-wrap;
 }
 
 .messageForm {
@@ -197,6 +204,29 @@
 }
 
 .mention {
+    position: relative;
     background-color: rgba(100, 100, 0, 0.66);
-    border-radius: 5px;
+
+    &:before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        pointer-events: none;
+        width: 2.75px;
+        background: rgba(200, 200, 0, 1);
+    }
+
+    &:hover {
+        background-color: rgba(88, 88, 0, 0.55);
+    }
+}
+
+.emoji {
+    position: relative;
+    top: 2px;
+    object-fit: contain;
+    width: 1.375em;
+    height: 1.375em;
 }
