--- a/src/styles/contextMenu.module.scss
+++ b/src/styles/contextMenu.module.scss
@@ -1,5 +1,5 @@
 .container {
-    position: absolute;
+    position: fixed;
     background-color: var(--primary-color);
     width: 250px;
     height: fit-content;
@@ -9,6 +9,14 @@
     box-shadow: inset 0 -7px rgba(0, 0, 0, 0.2), 0 0 4px rgba(0, 0, 0, 0.15);
     padding: 2px 0 7px 0;
     border-radius: 7px;
+
+    @media (max-width: 768px) {
+        bottom: 0;
+        width: 100%;
+        box-shadow: unset;
+        padding: 5px 0 5px 0;
+        border-radius: unset;
+    }
 }
 
 .item {
@@ -32,6 +40,10 @@
     &>i {
         margin-left: 10px;
     }
+
+    @media (max-width: 768px) {
+        border-radius: unset;
+    }
 }
 
 .divider {
@@ -40,4 +52,21 @@
     margin: 5px;
     border-radius: 5px;
     opacity: 0.25;
+}
+
+.mobileModal {
+    display: none;
+
+    @media (max-width: 768px) {
+        display: block;
+        position: fixed;
+        z-index: 15;
+        left: 0;
+        top: 0;
+        opacity: 1;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, .6);
+    }
 }
